sps_indirect py file added

--- a/indirect_identification/sps_indirect.ipynb
+++ b/indirect_identification/sps_indirect.ipynb
@@ -271,9 +271,20 @@
    "source": [
     "import os\n",
     "os.environ['CUPY_ACCELERATORS'] = 'cub'\n",
-    "import cupy as cp\n",
-    "from cupyx.scipy.linalg import solve_triangular\n",
-    "from cupyx.scipy.signal import lfilter\n",
+    "\n",
+    "import os\n",
+    "import torch\n",
+    "try:\n",
+    "    torch.cuda.current_device()\n",
+    "    import cupy as cp\n",
+    "    from cupyx.scipy.linalg import solve_triangular\n",
+    "    from cupyx.scipy.signal import lfilter\n",
+    "except:\n",
+    "    # Fall back to unoptimised versions\n",
+    "    import numpy as cp\n",
+    "    from scipy.linalg import solve_triangular\n",
+    "    from scipy.signal import lfilter\n",
+    "\n",
     "cp.random.seed(42)\n",
     "class d_tfs:\n",
     "    def __init__(self, A):\n",
