sps with pendulum

--- a/indirect_identification/sps_control.ipynb
+++ b/indirect_identification/sps_control.ipynb
@@ -2,14 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[-2.22044603e-16  9.09090909e-01 -2.09719398e-24 -2.85471356e-16]\n",
+      " [ 9.09090909e-01  0.00000000e+00 -4.15347996e-16  0.00000000e+00]\n",
+      " [ 0.00000000e+00  1.81818182e+00  0.00000000e+00  0.00000000e+00]\n",
+      " [ 1.81818182e+00 -2.22044605e-16  0.00000000e+00  0.00000000e+00]]\n",
+      "<class 'numpy.ndarray'>\n",
       "Cart Position:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\mukul\\Desktop\\Unimelb\\Masters\\Capstone\\Learning-Dynamic-Systems\\.venv\\Lib\\site-packages\\scipy\\signal\\_ltisys.py:599: BadCoefficients: Badly conditioned filter coefficients (numerator): the results may be meaningless\n",
+      "  self.num, self.den = normalize(*system)\n"
      ]
     },
     {
@@ -89,7 +102,10 @@
     "D = np.zeros((C.shape[0], B.shape[1]))\n",
     "# Define the sample time for discretization\n",
     "dt = 0.001  # Sampling time (seconds)\n",
-    "\n",
+    "ss = signal.StateSpace(A, B, C, D)\n",
+    "G = ss.to_tf()\n",
+    "print(G.num)\n",
+    "print(type(G.num))\n",
     "# Discretize the system using Zero-Order Hold (ZOH) method\n",
     "system_zoh = signal.cont2discrete((A, B, C, D), dt, method='zoh')\n",
     "\n",
