--- a/indirect_identification/sps_indirect.ipynb
+++ b/indirect_identification/sps_indirect.ipynb
@@ -1016,6 +1016,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.88539816]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "state = np.array([0.0, 0.0, np.pi/4 + 0.1, 0.0])\n",
+    "observable = np.array([[1, 0, 0, 0], [0, 0, 1, 0]])\n",
+    "# only get the observable states by multiplying the state with the observable matrix\n",
+    "o_state = observable @ state\n",
+    "\n",
+    "print(o_state)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
