Adding stability checks to the d_tfs

--- a/indirect_identification/notebooks/mimo_d_tfs.ipynb
+++ b/indirect_identification/notebooks/mimo_d_tfs.ipynb
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
    "source": [
     "from indirect_identification.d_tfs import d_tfs\n",
     "import numpy as np\n",
-    "\n",
+    "import numba as nb\n",
     "\n",
     "# Define the coefficients of the transfer functions\n",
     "A = [1, -0.33]  # A(z^-1) = 1 - 0.33z^-1\n",
@@ -963,6 +963,65 @@
     "G = np.array([[B_tf, C_tf],\n",
     "              [D_tf, B_tf]])\n",
     "print(G)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### stability checks\n",
+    "faster with just njit, fastmath leads to some unexpected delays. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is_stable           :    CPU:    47.677 us   +/- 16.207 (min:    27.400 / max:  1415.800) us     GPU-0:    93.802 us   +/- 351.228 (min:     2.048 / max: 12115.040) us\n",
+      "is_stable_2         :    CPU:     3.055 us   +/-  3.344 (min:     1.600 / max:   395.700) us     GPU-0:    24.524 us   +/- 131.148 (min:     2.016 / max:  7612.256) us\n",
+      "is_stable_3         :    CPU:     3.024 us   +/-  2.066 (min:     1.800 / max:    69.900) us     GPU-0:    24.296 us   +/- 114.028 (min:     2.016 / max:  7485.568) us\n"
+     ]
+    }
+   ],
+   "source": [
+    "from cupyx.profiler import benchmark\n",
+    "def is_stable(den, epsilon=0.001) -> bool:   \n",
+    "    \"\"\"\n",
+    "    Check if the discrete transfer function is stable.\n",
+    "    Returns:\n",
+    "    bool: True if stable (all poles inside the unit circle), False otherwise.\n",
+    "    \"\"\"\n",
+    "    poles = np.roots(den)  # Compute poles (roots of denominator)\n",
+    "    return np.all(np.abs(poles) < 1-epsilon)  # Check if all poles are inside the unit circle\n",
+    "\n",
+    "@nb.jit(nopython=True, fastmath=True)\n",
+    "def is_stable_2(den: np.ndarray, epsilon: float = 0.001) -> bool:   \n",
+    "    \"\"\"\n",
+    "    Check if the discrete transfer function is stable.\n",
+    "    Returns:\n",
+    "    bool: True if stable (all poles inside the unit circle), False otherwise.\n",
+    "    \"\"\"\n",
+    "    poles = np.roots(den)  # Compute poles (roots of denominator)\n",
+    "    return np.all(np.abs(poles) < 1-epsilon)  # Check if all poles are inside the unit circle\n",
+    "\n",
+    "@nb.njit\n",
+    "def is_stable_3(den: np.ndarray, epsilon: float = 0.001) -> bool:   \n",
+    "    \"\"\"\n",
+    "    Check if the discrete transfer function is stable.\n",
+    "    Returns:\n",
+    "    bool: True if stable (all poles inside the unit circle), False otherwise.\n",
+    "    \"\"\"\n",
+    "    poles = np.roots(den)  # Compute poles (roots of denominator)\n",
+    "    return np.all(np.abs(poles) < 1-epsilon)  # Check if all poles are inside the unit circle\n",
+    "\n",
+    "print(benchmark(is_stable, (A_tf.den, 0.001), n_repeat=100000))\n",
+    "print(benchmark(is_stable_2, (A_tf.den, 0.001), n_repeat=100000))\n",
+    "print(benchmark(is_stable_3, (A_tf.den, 0.001), n_repeat=100000))"
    ]
   },
   {
