simulation integrated with controller

--- a/optimal_controller/nth_order_conf_regions.ipynb
+++ b/optimal_controller/nth_order_conf_regions.ipynb
@@ -96,11 +96,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Directory: D:\\mukul\\Desktop\\Unimelb\\Masters\\Capstone\\Learning-Dynamic-Systems\\optimal_controller\n",
+      "Parent Directory: D:\\mukul\\Desktop\\Unimelb\\Masters\\Capstone\\Learning-Dynamic-Systems\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Get the current notebook's directory\n",
+    "parent = Path().resolve()  # Current working directory (notebook's directory)\n",
+    "root = parent.parent       # Go one level up\n",
+    "\n",
+    "print(\"Current Directory:\", parent)\n",
+    "print(\"Parent Directory:\", root)\n",
+    "\n",
+    "# Optionally append to sys.path\n",
+    "sys.path.append(str(root))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sps_indirect import SPS_indirect_model, d_tfs"
+    "from indirect_identification.sps_indirect import SPS_indirect_model, d_tfs"
    ]
   },
   {
@@ -510,7 +539,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "capstone_v2",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -524,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
