--- a/optimal_controller/optimal_controls.ipynb
+++ b/optimal_controller/optimal_controls.ipynb
@@ -126,11 +126,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sps_indirect import SPS_indirect_model"
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Get the current notebook's directory\n",
+    "parent = Path().resolve()  # Current working directory (notebook's directory)\n",
+    "root = parent.parent       # Go one level up\n",
+    "\n",
+    "print(\"Current Directory:\", parent)\n",
+    "print(\"Parent Directory:\", root)\n",
+    "\n",
+    "# Optionally append to sys.path\n",
+    "sys.path.append(str(root))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from indirect_identification.sps_indirect import SPS_indirect_model"
    ]
   },
   {
@@ -306,25 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\conor\\anaconda3\\envs\\capstone_v2\\lib\\site-packages\\cupy\\_environment.py:217: UserWarning: CUDA path could not be detected. Set CUDA_PATH environment variable if CuPy fails to load.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from optimal_controls import tf_to_ocf, tf_list_to_ocf_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +350,7 @@
        " array([[0., 0., 1.]]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,6 +377,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.    1.58  0.255]\n",
+      " [0.    1.56  0.256]\n",
+      " [0.    1.52  0.252]\n",
+      " [0.    1.58  0.25 ]\n",
+      " [0.    1.53  0.253]] (5, 3)\n",
+      "[0.     1.554  0.2532]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "state = np.array([1, 0, 0])\n",
+    "input = np.array([1])\n",
+    "states = np.dot(A_in_set, state) + np.dot(B_in_set, input)\n",
+    "print(states, states.shape)\n",
+    "print(np.mean(states, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -374,30 +419,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.69256098,  0.08651108, -0.21219427]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from optimal_controls import get_optimal_controller\n",
     "\n",
     "n = 3\n",
-    "Q = cp.eye(n)\n",
-    "R = cp.eye(1)\n",
-    "x_0 = cp.zeros([n,1])\n",
+    "Q = np.eye(n)\n",
+    "R = np.eye(1)\n",
+    "x_0 = np.zeros([n,1])\n",
     "x_0[0][0] = 1\n",
     "\n",
-    "get_optimal_controller(A_in_set,B_in_set,Q,R,x_0)"
+    "K = get_optimal_controller(A_in_set,B_in_set,Q,R,x_0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.69256098  0.08651108 -0.21219427]]\n",
+      "[0.77907206]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(K)\n",
+    "K_2 = np.array([[-0.5, -0.5, -0.5], [0.5, 0.5, 0.5]])\n",
+    "print(np.dot(K_2,np.array([1,1,0])))\n",
+    "print(np.dot(K,np.array([1,1,0])))"
    ]
   },
   {
@@ -1186,7 +1241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "capstone_v2",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1200,7 +1255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
