SPS class created to begin integration with search

--- a/indirect_identification/notebooks/sps_control.ipynb
+++ b/indirect_identification/notebooks/sps_control.ipynb
@@ -2,6 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Directory: D:\\mukul\\Desktop\\Unimelb\\Masters\\Capstone\\Learning-Dynamic-Systems\\indirect_identification\\notebooks\n",
+      "Parent Directory: D:\\mukul\\Desktop\\Unimelb\\Masters\\Capstone\\Learning-Dynamic-Systems\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Get the current notebook's directory\n",
+    "parent = Path().resolve()  # Current working directory (notebook's directory)\n",
+    "root = parent.parent.parent       # Go one level up\n",
+    "\n",
+    "print(\"Current Directory:\", parent)\n",
+    "print(\"Parent Directory:\", root)\n",
+    "\n",
+    "# Optionally append to sys.path\n",
+    "sys.path.append(str(root))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 2) (2, 2) (2, 2) (2, 2)\n",
+      "(0, 0): [1. 2. 2.], [1. 2. 1.]\n",
+      "(1, 0): [0. 1. 0.], [1. 2. 1.]\n",
+      "(0, 1): [0. 1. 4.], [1. 2. 1.]\n",
+      "(1, 1): [1. 4. 0.], [1. 2. 1.]\n",
+      "[[Transfer Function: num=[1. 2. 2.], den=[1. 2. 1.]\n",
+      "  Transfer Function: num=[0. 1. 4.], den=[1. 2. 1.]]\n",
+      " [Transfer Function: num=[0. 1. 0.], den=[1. 2. 1.]\n",
+      "  Transfer Function: num=[1. 4. 0.], den=[1. 2. 1.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.signal import ss2tf\n",
+    "import numpy as np\n",
+    "from indirect_identification.d_tfs import d_tfs\n",
+    "\n",
+    "A = np.array([[-2, -1], \n",
+    "              [1,  0]])\n",
+    "\n",
+    "B = np.array([[1, 2], \n",
+    "              [0, 1]])  # 2×2 matrix\n",
+    "\n",
+    "C = np.array([[0, 1], \n",
+    "              [1, 0]])  # 2×2 matrix\n",
+    "\n",
+    "D = np.array([[1, 0], \n",
+    "              [0, 1]])  # 2×2 matrix\n",
+    "\n",
+    "print(A.shape, B.shape, C.shape, D.shape)\n",
+    "n_inputs = B.shape[1]  # Number of inputs\n",
+    "n_outputs = C.shape[0]  # Number of outputs\n",
+    "G = np.zeros((n_outputs, n_inputs), dtype=object)  # Create an empty list to store the transfer functions\n",
+    "for j in range(n_inputs):  # Loop over inputs\n",
+    "    num, den = ss2tf(A, B, C, D, input=j)  # Use `input=j` to extract column j of B\n",
+    "    for i in range(n_outputs):\n",
+    "        G[i, j] = d_tfs((num[i], den))\n",
+    "\n",
+    "        print(f\"({i}, {j}): {num[i]}, {den}\")\n",
+    "\n",
+    "print(G)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
