Updated code + file structure

--- a/optimal_controller/optimal_controller.ipynb
+++ b/optimal_controller/optimal_controller.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,12 @@
     "from state_space import generate_perturbed\n",
     "from optimal_controller import OptimalControlSolver, get_optimal_controller\n",
     "import logging\n",
-    "logging.basicConfig(level=logging.INFO, force=True)  # force=True resets any old config"
+    "logging.basicConfig(level=logging.INFO, force=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,15 +52,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can use an instance of OptimalControlSolver to compute the controller"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:optimal_controller: Computed solution via Riccati heuristic, K = [[0.909 0.756 1.468 2.877]]\n",
+      "INFO:optimal_controller: Computed solution via Riccati heuristic, K = [[0.987 0.856 1.603 3.087]]\n",
       "INFO:optimal_controller: Riccati heuristic did not return a stabilising controller!\n"
      ]
     }
@@ -72,21 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:optimal_controller: Convex hull of A set has 51 vertices\n",
-      "INFO:optimal_controller: Convex hull of B set has 49 vertices\n",
-      "INFO:optimal_controller: This will lead to 2499 LMI constraints\n",
-      "INFO:optimal_controller: Defined 2499 LMI constraints\n",
-      "INFO:optimal_controller: SolutionStatus.Optimal, simultaneously stabilising feedback gain is K = [[0.175 0.050 1.069 2.777]]\n",
-      "INFO:optimal_controller: Optimised the simultaneously stabilising feedback gain, yielding K = [[0.169 0.075 1.025 2.777]]\n",
-      "INFO:optimal_controller: Worst J using initial K: 380.3308\n",
-      "INFO:optimal_controller: Worst J using optimized K: 254.7613\n"
+      "INFO:optimal_controller: Convex hull of A set has 54 vertices\n",
+      "INFO:optimal_controller: Convex hull of B set has 60 vertices\n",
+      "INFO:optimal_controller: This will lead to 3240 LMI constraints\n",
+      "INFO:optimal_controller: Defined 3240 LMI constraints\n",
+      "INFO:optimal_controller: SolutionStatus.Optimal, simultaneously stabilising feedback gain is K = [[0.166 0.026 1.051 2.765]]\n",
+      "INFO:optimal_controller: Optimised the simultaneously stabilising feedback gain, yielding K = [[0.869 0.328 0.986 2.490]]\n",
+      "INFO:optimal_controller: Worst J using initial K: 833.2241\n",
+      "INFO:optimal_controller: Worst J using optimized K: 314.4614\n"
      ]
     }
    ],
@@ -95,37 +102,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or just use get_optimal_controller()"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:optimal_controller: Convex hull of A set has 51 vertices\n",
-      "INFO:optimal_controller: Convex hull of B set has 49 vertices\n",
-      "INFO:optimal_controller: This will lead to 2499 LMI constraints\n",
-      "INFO:optimal_controller: Defined 2499 LMI constraints\n",
-      "INFO:optimal_controller: SolutionStatus.Optimal, simultaneously stabilising feedback gain is K = [[0.175 0.050 1.069 2.777]]\n",
-      "INFO:optimal_controller: Optimised the simultaneously stabilising feedback gain, yielding K = [[0.169 0.075 1.025 2.777]]\n",
-      "INFO:optimal_controller: Worst J using initial K: 380.3308\n",
-      "INFO:optimal_controller: Worst J using optimized K: 254.7613\n"
+      "INFO:optimal_controller: Computed solution via Riccati heuristic, K = [[0.987 0.856 1.603 3.087]]\n",
+      "INFO:optimal_controller: Riccati heuristic did not return a stabilising controller!\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_optimal_controller(A_list, B_list, method='riccati')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:optimal_controller: Convex hull of A set has 54 vertices\n",
+      "INFO:optimal_controller: Convex hull of B set has 60 vertices\n",
+      "INFO:optimal_controller: This will lead to 3240 LMI constraints\n",
+      "INFO:optimal_controller: Defined 3240 LMI constraints\n",
+      "INFO:optimal_controller: SolutionStatus.Optimal, simultaneously stabilising feedback gain is K = [[0.166 0.026 1.051 2.765]]\n",
+      "INFO:optimal_controller: Optimised the simultaneously stabilising feedback gain, yielding K = [[0.869 0.328 0.986 2.490]]\n",
+      "INFO:optimal_controller: Worst J using initial K: 833.2241\n",
+      "INFO:optimal_controller: Worst J using optimized K: 314.4614\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.169, 0.075, 1.025, 2.777]])"
+       "array([[0.869, 0.328, 0.986, 2.490]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_optimal_controller(A_list, B_list)"
+    "get_optimal_controller(A_list, B_list, method='LMI')"
    ]
   }
  ],
@@ -145,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
