--- a/indirect_identification/notebooks/sps_params.ipynb
+++ b/indirect_identification/notebooks/sps_params.ipynb
@@ -850,43 +850,15 @@
      "text": [
       "(2, 2, 5)\n",
       "(5,)\n",
-      "Y:  [[[ 0.40519009  0.17085206  0.98444038  0.48814902  0.28467939]\n",
-      "  [ 0.87033825  0.92832334  0.89956178  0.34257284  0.02217413]]\n",
-      "\n",
-      " [[-0.40519009 -0.17085206 -0.98444038  0.48814902  0.28467939]\n",
-      "  [ 0.87033825 -0.92832334 -0.89956178 -0.34257284 -0.02217413]]]\n",
       "(2, 5, 2, 4)\n",
-      "[[[ 0.          0.          0.          0.        ]\n",
-      "  [ 0.          0.          0.          0.        ]]\n",
-      "\n",
-      " [[ 0.40519009  0.         -0.54247414  0.        ]\n",
-      "  [ 0.87033825  0.          0.         -0.54247414]]\n",
-      "\n",
-      " [[ 0.17085206  0.40519009 -0.32889869 -0.54247414]\n",
-      "  [ 0.87407592  1.14157532 -0.10849483 -0.49164093]]\n",
-      "\n",
-      " [[ 0.98444038  0.17085206 -0.52086958 -0.32889869]\n",
-      "  [ 0.86667192  1.09277268 -0.06577974 -0.61953919]]\n",
-      "\n",
-      " [[ 0.48814902  0.98444038 -0.58507954 -0.52086958]\n",
-      "  [ 0.29048588  1.15999658 -0.10417392 -0.74134042]]]\n",
-      "(2, 5, 2, 4)\n",
-      "[[[ 0.          0.          0.          0.        ]\n",
-      "  [ 0.          0.          0.          0.        ]]\n",
-      "\n",
-      " [[ 0.40519009  0.         -0.54247414  0.        ]\n",
-      "  [ 0.87033825  0.          0.         -0.54247414]]\n",
-      "\n",
-      " [[ 0.17085206  0.40519009 -0.32889869 -0.54247414]\n",
-      "  [ 0.87407592  1.14157532 -0.10849483 -0.49164093]]\n",
-      "\n",
-      " [[ 0.98444038  0.17085206 -0.52086958 -0.32889869]\n",
-      "  [ 0.86667192  1.09277268 -0.06577974 -0.61953919]]\n",
-      "\n",
-      " [[ 0.48814902  0.98444038 -0.58507954 -0.52086958]\n",
-      "  [ 0.29048588  1.15999658 -0.10417392 -0.74134042]]]\n",
-      "create_phi_optimized_2states_1input:    CPU:     6.351 us   +/-  5.099 (min:     3.500 / max:   115.300) us     GPU-0:    23.678 us   +/- 53.613 (min:     2.144 / max:  2126.112) us\n",
-      "create_phi_optimized_2states_1input2:    CPU:     7.104 us   +/-  5.340 (min:     3.700 / max:   168.000) us     GPU-0:    27.916 us   +/- 69.652 (min:     2.208 / max:  2885.632) us\n"
+      "True\n",
+      "create_phi_optimized_2states_1input:    CPU:     5.753 us   +/-  6.584 (min:     3.200 / max:  1316.100) us     GPU-0:    23.342 us   +/- 64.092 (min:     2.144 / max:  3934.112) us\n",
+      "True\n",
+      "create_phi_optimized_2states_1input2:    CPU:     5.844 us   +/-  5.243 (min:     3.000 / max:   467.900) us     GPU-0:    22.710 us   +/- 60.267 (min:     2.144 / max:  2076.672) us\n",
+      "True\n",
+      "create_phi_optimized_2states_1input3:    CPU:     5.551 us   +/-  4.551 (min:     3.400 / max:   472.700) us     GPU-0:    20.295 us   +/- 52.238 (min:     2.176 / max:  1883.136) us\n",
+      "True\n",
+      "create_phi_optimized_2states_1input4:    CPU:     5.283 us   +/-  3.162 (min:     3.100 / max:   172.200) us     GPU-0:    19.569 us   +/- 50.028 (min:     2.208 / max:  1813.440) us\n"
      ]
     }
    ],
@@ -986,6 +958,120 @@
     "            Jk1[3]= -(u_im1 + a1 * u_im2)\n",
     "\n",
     "    return J\n",
+    "@njit(cache=True, fastmath=True)\n",
+    "def create_phi_optimized_2states_1input3(Y, U, A, B, C):\n",
+    "    m, _, t = Y.shape\n",
+    "    \n",
+    "    # Normalize U to always be (m, t)\n",
+    "    if U.ndim == 1:\n",
+    "        U_eff = np.broadcast_to(U, (m, U.shape[0]))\n",
+    "    elif U.shape[0] == 1:\n",
+    "        U_eff = np.broadcast_to(U[0], (m, U.shape[1]))\n",
+    "    else:\n",
+    "        U_eff = U\n",
+    "\n",
+    "    J = np.zeros((m, t, 2, 4))\n",
+    "\n",
+    "    a1 = A[1]\n",
+    "    a2 = A[2]\n",
+    "    b1 = B[1]\n",
+    "    b2 = B[2]\n",
+    "\n",
+    "    for k in range(m):\n",
+    "        Y1 = Y[k, 0]\n",
+    "        Y2 = Y[k, 1]\n",
+    "        Uk = U_eff[k]\n",
+    "\n",
+    "        if t > 1:\n",
+    "            Jk0 = J[k, 1, 0]\n",
+    "            Jk1 = J[k, 1, 1]\n",
+    "\n",
+    "            Jk0[0] = Y1[0]\n",
+    "            Jk0[2] = -Uk[0]\n",
+    "            Jk1[0] = Y2[0]\n",
+    "            Jk1[3] = -Uk[0]\n",
+    "\n",
+    "        for i in range(2, t):\n",
+    "            im1 = i - 1\n",
+    "            im2 = i - 2\n",
+    "\n",
+    "            Jk0 = J[k, i, 0]\n",
+    "            Jk1 = J[k, i, 1]\n",
+    "\n",
+    "            # Row 0\n",
+    "            Jk0[0] = Y1[im1]\n",
+    "            Jk0[1] = Y1[im2]\n",
+    "            Jk0[2] = -Uk[im1]\n",
+    "            Jk0[3] = -Uk[im2]\n",
+    "\n",
+    "            # Row 1\n",
+    "            Jk1[0] = Y2[im1] - b2 * Uk[im2]\n",
+    "            Jk1[1] = Y2[im2] + b1 * Uk[im2]\n",
+    "            Jk1[2] = a2 * Uk[im2]\n",
+    "            Jk1[3] = -(Uk[im1] + a1 * Uk[im2])\n",
+    "\n",
+    "    return J\n",
+    "\n",
+    "@njit(cache=True, fastmath=True)\n",
+    "def create_phi_optimized_2states_1input4(Y, U, A, B, C):\n",
+    "    m, _, t = Y.shape\n",
+    "    \n",
+    "    # Broadcasting U to m rows\n",
+    "    if U.ndim == 1:\n",
+    "        U_eff = np.broadcast_to(U, (m, U.shape[0]))\n",
+    "    elif U.shape[0] == 1:\n",
+    "        U_eff = np.broadcast_to(U[0], (m, U.shape[1]))\n",
+    "    else:\n",
+    "        U_eff = U\n",
+    "    \n",
+    "\n",
+    "    # Preallocate J once with the correct size\n",
+    "    J = np.zeros((m, t, 2, 4), dtype=np.float64)\n",
+    "    \n",
+    "    # Cache commonly used values from A and B\n",
+    "    a1, a2 = A[1], A[2]\n",
+    "    b1, b2 = B[1], B[2]\n",
+    "\n",
+    "    for k in range(m):\n",
+    "        Y1 = Y[k, 0]\n",
+    "        Y2 = Y[k, 1]\n",
+    "        Uk = U_eff[k]  # This is already broadcasted to (t, )\n",
+    "\n",
+    "        # Handle i = 1 separately (no im2 index)\n",
+    "        if t > 1:\n",
+    "            Jk0 = J[k, 1, 0]\n",
+    "            Jk1 = J[k, 1, 1]\n",
+    "\n",
+    "            Jk0[0] = Y1[0]\n",
+    "            Jk0[2] = -Uk[0]\n",
+    "            Jk1[0] = Y2[0]\n",
+    "            Jk1[3] = -Uk[0]\n",
+    "\n",
+    "        # Loop for i = 2 to t\n",
+    "        for i in range(2, t):\n",
+    "            im1, im2 = i - 1, i - 2\n",
+    "            Jk0 = J[k, i, 0]\n",
+    "            Jk1 = J[k, i, 1]\n",
+    "\n",
+    "            # Reusing values instead of multiple calls to Y and U\n",
+    "            y1_im1, y1_im2 = Y1[im1], Y1[im2]\n",
+    "            y2_im1, y2_im2 = Y2[im1], Y2[im2]\n",
+    "            u_im1, u_im2 = Uk[im1], Uk[im2]\n",
+    "\n",
+    "            # Assign values to Jk0 and Jk1 directly without intermediate variables\n",
+    "            Jk0[0] = y1_im1\n",
+    "            Jk0[1] = y1_im2\n",
+    "            Jk0[2] = -u_im1\n",
+    "            Jk0[3] = -u_im2\n",
+    "\n",
+    "            Jk1[0] = y2_im1 - b2 * u_im2\n",
+    "            Jk1[1] = y2_im2 + b1 * u_im2\n",
+    "            Jk1[2] = a2 * u_im2\n",
+    "            Jk1[3] = -(u_im1 + a1 * u_im2)\n",
+    "\n",
+    "    return J\n",
+    "\n",
+    "\n",
     "\n",
     "m = 2\n",
     "t=5\n",
@@ -1000,15 +1086,21 @@
     "A = np.array([1.0, 0.3, -0.2])    # a1, a2\n",
     "B = np.array([0, 0.5, 0.1])     # b1, b2\n",
     "C = np.array([1.0])          # c1\n",
-    "print(\"Y: \", Y)\n",
+    "\n",
     "phi = create_phi_optimized_2states_1input(Y,U,A,B,C)\n",
     "print(phi.shape)\n",
-    "print(phi[0,:,:])\n",
-    "phi = create_phi_optimized_2states_1input2(Y,U,A,B,C)\n",
-    "print(phi.shape)\n",
-    "print(phi[0,:,:])\n",
-    "print(benchmark(create_phi_optimized_2states_1input, (Y, U, A, B, C), n_repeat=10000))\n",
-    "print(benchmark(create_phi_optimized_2states_1input2, (Y, U, A, B, C), n_repeat=10000))"
+    "\n",
+    "functions = [\n",
+    "    create_phi_optimized_2states_1input,\n",
+    "    create_phi_optimized_2states_1input2,\n",
+    "    create_phi_optimized_2states_1input3,\n",
+    "    create_phi_optimized_2states_1input4,\n",
+    "]\n",
+    "\n",
+    "for f in functions:\n",
+    "    p = f(Y,U,A,B,C)\n",
+    "    print(np.allclose(phi, p))\n",
+    "    print(benchmark(f, (Y, U, A, B, C), n_repeat=100000))\n"
    ]
   },
   {
