Updated ocSolver to handle 1D and 0D uncertainty. Introduced OpenLoopStabilityError for SPS indirect

--- a/optimal_controller/optimal_controls.ipynb
+++ b/optimal_controller/optimal_controls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
     "\n",
     "import numpy as np\n",
     "from state_space import generate_perturbed\n",
-    "from optimal_controller import OptimalControlSolver, get_optimal_controller\n",
+    "from optimal_controls import OptimalControlSolver, get_optimal_controller\n",
     "import logging\n",
     "logging.basicConfig(level=logging.INFO, force=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,15 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:optimal_controller: Computed solution via Riccati heuristic, K = [[0.987 0.856 1.603 3.087]]\n",
-      "INFO:optimal_controller: Riccati heuristic did not return a stabilising controller!\n"
+      "INFO:optimal_controls: Computed solution via Riccati heuristic, K = [[-0.04552237 -0.30934185  0.37383067  1.52605108]]\n",
+      "INFO:optimal_controls: Riccati heuristic did not return a stabilising controller!\n"
      ]
     }
    ],
@@ -79,21 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:optimal_controller: Convex hull of A set has 54 vertices\n",
-      "INFO:optimal_controller: Convex hull of B set has 60 vertices\n",
-      "INFO:optimal_controller: This will lead to 3240 LMI constraints\n",
-      "INFO:optimal_controller: Defined 3240 LMI constraints\n",
-      "INFO:optimal_controller: SolutionStatus.Optimal, simultaneously stabilising feedback gain is K = [[0.166 0.026 1.051 2.765]]\n",
-      "INFO:optimal_controller: Optimised the simultaneously stabilising feedback gain, yielding K = [[0.869 0.328 0.986 2.490]]\n",
-      "INFO:optimal_controller: Worst J using initial K: 833.2241\n",
-      "INFO:optimal_controller: Worst J using optimized K: 314.4614\n"
+      "INFO:optimal_controls: Convex hull of A set has 61 vertices\n",
+      "INFO:optimal_controls: Convex hull of B set has 64 vertices\n",
+      "INFO:optimal_controls: This will lead to 3904 LMI constraints\n",
+      "INFO:optimal_controls: Defined 3904 LMI constraints\n",
+      "INFO:optimal_controls: SolutionStatus.Optimal, simultaneously stabilising feedback gain is K = [[0.20547716 0.03638015 1.04018447 2.75978979]]\n",
+      "INFO:optimal_controls: Optimised the simultaneously stabilising feedback gain, yielding K = [[0.19825017 0.06734281 0.98565722 2.75899655]]\n",
+      "INFO:optimal_controls: Worst J using initial K: 613.0865\n",
+      "INFO:optimal_controls: Worst J using optimized K: 548.8586\n"
      ]
     }
    ],
@@ -110,60 +110,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:optimal_controller: Computed solution via Riccati heuristic, K = [[0.987 0.856 1.603 3.087]]\n",
-      "INFO:optimal_controller: Riccati heuristic did not return a stabilising controller!\n"
+      "INFO:optimal_controls: Computed solution via Riccati heuristic, K = [[-0.04552237 -0.30934185  0.37383067  1.52605108]]\n",
+      "INFO:optimal_controls: Riccati heuristic did not return a stabilising controller!\n"
      ]
     }
    ],
    "source": [
-    "get_optimal_controller(A_list, B_list, method='riccati')"
+    "# get_optimal_controller(A_list, B_list, method='riccati')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:optimal_controller: Convex hull of A set has 54 vertices\n",
-      "INFO:optimal_controller: Convex hull of B set has 60 vertices\n",
-      "INFO:optimal_controller: This will lead to 3240 LMI constraints\n",
-      "INFO:optimal_controller: Defined 3240 LMI constraints\n",
-      "INFO:optimal_controller: SolutionStatus.Optimal, simultaneously stabilising feedback gain is K = [[0.166 0.026 1.051 2.765]]\n",
-      "INFO:optimal_controller: Optimised the simultaneously stabilising feedback gain, yielding K = [[0.869 0.328 0.986 2.490]]\n",
-      "INFO:optimal_controller: Worst J using initial K: 833.2241\n",
-      "INFO:optimal_controller: Worst J using optimized K: 314.4614\n"
+      "INFO:optimal_controls: Convex hull of A set has 61 vertices\n",
+      "INFO:optimal_controls: Convex hull of B set has 64 vertices\n",
+      "INFO:optimal_controls: This will lead to 3904 LMI constraints\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:optimal_controls: Defined 3904 LMI constraints\n",
+      "INFO:optimal_controls: SolutionStatus.Optimal, simultaneously stabilising feedback gain is K = [[0.20547716 0.03638015 1.04018447 2.75978979]]\n",
+      "INFO:optimal_controls: Optimised the simultaneously stabilising feedback gain, yielding K = [[0.19825017 0.06734281 0.98565722 2.75899655]]\n",
+      "INFO:optimal_controls: Worst J using initial K: 613.0865\n",
+      "INFO:optimal_controls: Worst J using optimized K: 548.8586\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.869, 0.328, 0.986, 2.490]])"
+       "array([[0.19825017, 0.06734281, 0.98565722, 2.75899655]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_optimal_controller(A_list, B_list, method='LMI')"
+    "# get_optimal_controller(A_list, B_list, method='LMI')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "capstone_v2",
+   "display_name": "capstone",
    "language": "python",
    "name": "python3"
   },
