--- a/fusion/fusion.ipynb
+++ b/fusion/fusion.ipynb
@@ -635,7 +635,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "capstone_v2",
+   "display_name": "capstone",
    "language": "python",
    "name": "python3"
   },
@@ -649,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
